# snake-agent

./: .gitignore  pyproject.toml
models/q_learning/: evaluation_metrics.csv  evaluation_runs.csv
scripts/: evaluate_agent.py  play.py  train_agent.py
src/snake_agent/: evaluation.py  trainer.py  utils.py
src/snake_agent/q_learning/: constants.py  q_learning_agent.py
src/snake_game/: board.py  constants.py  food.py  game.py  player.py  reward.py  snake.py
