[tool.poetry]
name = "snake-agent"
version = "0.1.0"
description = ""
authors = ["ugm2 <unaigaraymaestre@gmail.com>"]
packages = [{ include = "snake_game", from = "src" }]

[tool.poetry.dependencies]
python = "^3.10"
pygame = "^2.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
